[gd_scene load_steps=94 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Resources/Img/Player/reaper_map.png" type="Texture" id=2]
[ext_resource path="res://Resources/audio/weapon_attack/player_weapon_attack_1.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/audio/weapon_attack/player_weapon_punch_attack_2.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/audio/player_sounds/player_death_1.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/audio/player_sounds/getting_hit.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/audio/movement_sounds/player_footsteps_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Characters/Misc/Camera.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/Img/GUI/HUD_map.png" type="Texture" id=9]
[ext_resource path="res://Resources/Img/GUI/buttons_map.png" type="Texture" id=10]
[ext_resource path="res://Resources/Img/GUI/btn_dir_jump.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Helpers/GUI_font.tres" type="DynamicFont" id=12]
[ext_resource path="res://Resources/audio/gackground_sounds/night_sounds_calm.wav" type="AudioStream" id=13]
[ext_resource path="res://Resources/audio/gackground_sounds/medieval_intro_music.wav" type="AudioStream" id=14]
[ext_resource path="res://Scripts/Block.gd" type="Script" id=15]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 504, 192 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.6
height = 8.3

[sub_resource type="Animation" id=3]
length = 0.55
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28, 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerWeaponHitRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:timer_start")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.36, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Audio/SFX")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.18 )
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_slash"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerWeaponHitRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("Audio/SFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.2 )
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:punch")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_hit"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "block"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 40 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Block/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20, 21, 22 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Audio/SFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_death_restart"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.05
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:damage_received")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HUD/MainHPBar:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("Audio/SFX")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.05 )
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_check_living_state"
} ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 1, 5, 6, 7, 8 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Audio/Stepps")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1, 0.5 )
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "attack_2"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "block"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "hurts"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachine" id=36]
states/attack/node = SubResource( 12 )
states/attack/position = Vector2( 152, 13 )
states/attack_2/node = SubResource( 13 )
states/attack_2/position = Vector2( 11.439, 88.5262 )
states/block/node = SubResource( 14 )
states/block/position = Vector2( 239.568, -105.474 )
states/death/node = SubResource( 15 )
states/death/position = Vector2( 519.568, 435.526 )
states/fall/node = SubResource( 16 )
states/fall/position = Vector2( 740, 13 )
states/hurts/node = SubResource( 17 )
states/hurts/position = Vector2( 570.439, 298.526 )
states/idle/node = SubResource( 18 )
states/idle/position = Vector2( 542, 124 )
states/jump/node = SubResource( 19 )
states/jump/position = Vector2( 1059, 247 )
states/walk/node = SubResource( 20 )
states/walk/position = Vector2( 277.439, 207.526 )
transitions = [ "idle", "jump", SubResource( 21 ), "jump", "fall", SubResource( 22 ), "fall", "idle", SubResource( 23 ), "idle", "fall", SubResource( 24 ), "idle", "attack", SubResource( 25 ), "attack", "idle", SubResource( 26 ), "idle", "hurts", SubResource( 27 ), "hurts", "idle", SubResource( 28 ), "walk", "idle", SubResource( 29 ), "idle", "walk", SubResource( 30 ), "attack", "attack_2", SubResource( 31 ), "attack_2", "idle", SubResource( 32 ), "hurts", "death", SubResource( 33 ), "idle", "block", SubResource( 34 ), "block", "idle", SubResource( 35 ) ]
start_node = "idle"
end_node = "death"
graph_offset = Vector2( -193.432, -185.474 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=37]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 6.81953, 10 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 9 )
region = Rect2( 67, 2, 227, 21 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 67, 23, 225, 20 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 10 )
region = Rect2( 0, 67, 66, 66 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 10 )
region = Rect2( 67, 67, 66, 66 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 10 )
region = Rect2( 67, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 10 )
region = Rect2( 0, 134, 66, 66 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 10 )
region = Rect2( 67, 134, 66, 66 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 10 )
region = Rect2( 134, 67, 66, 66 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 10 )
region = Rect2( 201, 67, 66, 66 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 10 )
region = Rect2( 134, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 10 )
region = Rect2( 201, 0, 66, 66 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 10 )
region = Rect2( 134, 201, 66, 66 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 10 )
region = Rect2( 201, 201, 66, 66 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 10 )
region = Rect2( 0, 201, 66, 66 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 10 )
region = Rect2( 67, 201, 66, 66 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 10 )
region = Rect2( 143, 134, 54, 47 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 9 )
region = Rect2( 56, 61, 235, 10 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 9 )
region = Rect2( 56, 71, 233, 10 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 9 )
region = Rect2( 49, 82, 232, 7 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 9 )
region = Rect2( 49, 89, 230, 7 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 9 )
region = Rect2( 38, 64, 9, 10 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 9 )
region = Rect2( 3, 2, 61, 61 )

[sub_resource type="CapsuleShape2D" id=60]
radius = 5.41665
height = 5.87008

[sub_resource type="Gradient" id=61]
colors = PoolColorArray( 0.651367, 0.804695, 0.90625, 1, 0.664063, 0.976379, 1, 1 )

[sub_resource type="GradientTexture" id=62]
gradient = SubResource( 61 )

[sub_resource type="Curve" id=63]
_data = [ Vector2( 0, 0.6903 ), 0.0, 0.0, 0, 0, Vector2( 0.999469, 0.28 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=64]
width = 50
curve = SubResource( 63 )

[sub_resource type="ParticlesMaterial" id=65]
emission_shape = 2
emission_box_extents = Vector3( 4, 6, 1 )
flag_disable_z = true
spread = 15.0
gravity = Vector3( 0, -98, 0 )
angular_velocity = -300.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 65.0
scale_curve = SubResource( 64 )
color_ramp = SubResource( 62 )

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 8, 10 )

[sub_resource type="Gradient" id=67]
colors = PoolColorArray( 0.137255, 0.180392, 0.466667, 0.588235, 0.533333, 0.866667, 0.956863, 0.588235 )

[sub_resource type="GradientTexture" id=68]
gradient = SubResource( 67 )

[sub_resource type="Curve" id=69]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.3647 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=70]
curve = SubResource( 69 )

[sub_resource type="ParticlesMaterial" id=71]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 70 )
color_ramp = SubResource( 68 )

[sub_resource type="Gradient" id=72]
offsets = PoolRealArray( 0, 0.248908, 1 )
colors = PoolColorArray( 0.476563, 0, 0, 1, 0.945098, 0.458824, 0.0313726, 0.839216, 0.997772, 1, 0.714844, 1 )

[sub_resource type="GradientTexture" id=73]
gradient = SubResource( 72 )

[sub_resource type="Curve" id=74]
_data = [ Vector2( 0, 0.7464 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.2096 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=75]
curve = SubResource( 74 )

[sub_resource type="ParticlesMaterial" id=76]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 35.0
initial_velocity_random = 0.64
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 75 )
color_ramp = SubResource( 73 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 12
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 1, -6 )
texture = SubResource( 1 )
vframes = 6
hframes = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.0139275, -0.5694 )
scale = Vector2( -1, 1 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/attack_2 = SubResource( 4 )
anims/block = SubResource( 5 )
anims/death = SubResource( 6 )
anims/fall = SubResource( 7 )
anims/hurts = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/jump = SubResource( 10 )
anims/walk = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 36 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 37 )

[node name="Camera" parent="." instance=ExtResource( 8 )]

[node name="PlayerWeaponHitRange" type="Area2D" parent="."]
editor/display_folded = true
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerWeaponHitRange"]
position = Vector2( 15.6604, -0.346598 )
shape = SubResource( 38 )
disabled = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MainHPBar" type="TextureProgress" parent="HUD"]
editor/display_folded = true
margin_left = 71.0
margin_top = 30.6534
margin_right = 298.0
margin_bottom = 51.6534
value = 100.0
texture_under = SubResource( 39 )
texture_progress = SubResource( 40 )

[node name="Tween" type="Tween" parent="HUD/MainHPBar"]

[node name="ActionBtns" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.346598
margin_bottom = -0.346619
__meta__ = {
"_edit_lock_": true
}

[node name="TouchLeft" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 51.7209, 490 )
normal = SubResource( 41 )
pressed = SubResource( 42 )
passby_press = true
action = "ui_left"
visibility_mode = 1

[node name="TouchRight" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 181.721, 490 )
normal = SubResource( 43 )
pressed = SubResource( 44 )
passby_press = true
action = "ui_right"
visibility_mode = 1

[node name="TouchUp" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 122, 420 )
normal = SubResource( 45 )
pressed = SubResource( 46 )
passby_press = true
action = "ui_up"
visibility_mode = 1

[node name="TouchUpLeft" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 30, 400 )
normal = ExtResource( 11 )
passby_press = true
action = "ui_left_up"
visibility_mode = 1

[node name="TouchUpRight" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 190.721, 400 )
normal = ExtResource( 11 )
passby_press = true
action = "ui_right_up"
visibility_mode = 1

[node name="TouchPick" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 763.721, 448 )
normal = SubResource( 47 )
pressed = SubResource( 48 )
passby_press = true
action = "ui_accept"
visibility_mode = 1

[node name="TouchAttack" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 878.721, 415 )
scale = Vector2( 1.5, 1.5 )
normal = SubResource( 49 )
pressed = SubResource( 50 )
passby_press = true
action = "ui_attack"
visibility_mode = 1

[node name="TouchHeal" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 800, 330.347 )
normal = SubResource( 51 )
pressed = SubResource( 52 )
action = "ui_action_1"
visibility_mode = 1

[node name="TouchBlock" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 920, 300.347 )
normal = SubResource( 77 )
pressed = SubResource( 78 )
action = "ui_block"
visibility_mode = 1

[node name="TouchOptions" type="TouchScreenButton" parent="HUD/ActionBtns"]
position = Vector2( 940, 30 )
normal = SubResource( 53 )
passby_press = true
action = "ui_cancel"
visibility_mode = 1

[node name="StamBar" type="TextureProgress" parent="HUD"]
margin_left = 81.0
margin_top = 50.0
margin_right = 316.0
margin_bottom = 60.0
value = 100.0
texture_under = SubResource( 54 )
texture_progress = SubResource( 55 )

[node name="EXPBar" type="TextureProgress" parent="HUD"]
margin_left = 74.0
margin_top = 60.0
margin_right = 306.0
margin_bottom = 67.0
value = 80.0
texture_under = SubResource( 56 )
texture_progress = SubResource( 57 )

[node name="Souls" type="Control" parent="HUD"]
editor/display_folded = true
margin_left = 80.0
margin_top = 74.0
margin_right = 120.0
margin_bottom = 114.0

[node name="SoulsIndicator" type="Label" parent="HUD/Souls"]
margin_left = 22.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 12 )
text = "30"

[node name="Tween" type="Tween" parent="HUD/Souls/SoulsIndicator"]

[node name="TextureRect" type="TextureRect" parent="HUD/Souls"]
margin_top = 1.0
margin_right = 16.0
margin_bottom = 19.0
texture = SubResource( 58 )
expand = true

[node name="Lvl" type="Control" parent="HUD"]
margin_left = 30.0
margin_top = 20.0
margin_right = 90.0
margin_bottom = 80.0

[node name="Lvl_bg" type="TextureRect" parent="HUD/Lvl"]
margin_left = -1.0
margin_right = 60.0
margin_bottom = 61.0
texture = SubResource( 59 )

[node name="lvl_count" type="Label" parent="HUD/Lvl"]
modulate = Color( 0.25098, 0.243137, 0.243137, 1 )
margin_left = -1.0
margin_top = 5.0
margin_right = 60.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 12 )
text = "1"
align = 1
valign = 1

[node name="HitBox" type="Area2D" parent="."]
editor/display_folded = true
visible = false
collision_mask = 10
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.72092, -0.346598 )
shape = SubResource( 60 )

[node name="Audio" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundSoundPlayer" type="AudioStreamPlayer" parent="Audio"]
pause_mode = 2
stream = ExtResource( 13 )
autoplay = true
bus = "NatureBG"

[node name="Stepps" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
pitch_scale = 1.5
bus = "Stepps"

[node name="SFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )
pitch_scale = 1.5
bus = "SFX"

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="Audio"]
pause_mode = 2
stream = ExtResource( 14 )
autoplay = true
bus = "Music"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="ParticlesAnimation" type="Particles2D" parent="."]
visible = false
position = Vector2( 0.279079, 3 )
amount = 50
preprocess = 2.0
speed_scale = 2.0
process_material = SubResource( 65 )

[node name="Timer" type="Timer" parent="ParticlesAnimation"]
wait_time = 0.4
one_shot = true

[node name="Block" type="Area2D" parent="."]
visible = false
collision_mask = 30
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block"]
position = Vector2( 8, -2 )
shape = SubResource( 66 )
disabled = true

[node name="BlockEffect" type="Particles2D" parent="Block"]
position = Vector2( 0, -2 )
amount = 50
lifetime = 0.8
speed_scale = 2.0
process_material = SubResource( 71 )

[node name="BlockedStrike" type="Particles2D" parent="Block"]
visible = false
position = Vector2( 12, -5 )
emitting = false
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 76 )

[connection signal="body_entered" from="PlayerWeaponHitRange" to="." method="_on_damage_dealt"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_player_screen_exited"]
[connection signal="timeout" from="ParticlesAnimation/Timer" to="." method="_on_SoulReceive_timeout"]
[connection signal="area_entered" from="Block" to="Block" method="_on_Block_area_entered"]
